--- a/customer/templates/customer/order.html
+++ b/customer/templates/customer/order.html
@@ -90,7 +90,68 @@
                     {% endfor %}
                 </div>
 
-                <button class="btn btn-dark mt-5">Place Order!</button>
+                <div class= "form-group pt-3">
+                    <label for="name">Full Name</label>
+                    <input required class="form-control" type ="text" placeholder = "Your Name" name="name"/>
+                </div>
+
+                <div class= "form-group pt-3">
+                    <label for="name">Email Address</label>
+                    <input required class="form-control" type ="text" placeholder = "example@company.com" name="email"/>
+                </div>
+
+                <div class= "form-group pt-3">
+                    <label for="name">Street address</label>
+                    <input required class="form-control" type ="text" placeholder = "A. Pureno g.20" name="street"/>
+                </div>
+
+                <div class ="row">
+                    <div class="col-md-4 col-sm-12" col-sm-12>
+                        <div class= "form-group pt-3">
+                            <label for="name">City</label>
+                            <input required class="form-control" type ="text" placeholder = "Vilnius" name="city"/>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12" col-sm-12>
+                        <div class= "form-group pt-3">
+                            <label for="name">State</label>
+                            <input required class="form-control" type ="text" placeholder = "Vilnius r." name="state"/>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12" col-sm-12>
+                        <div class= "form-group pt-3">
+                            <label for="name">Zip Code</label>
+                            <input required class="form-control" type ="text" placeholder = "94117" name="zip_code"/>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#checkModal">
+                    Submit Order!
+                </button>
+                <!--<button class="btn btn-dark mt-5">Place Order!</button>-->
+
+                <!-- Modal -->
+                <div class="modal fade" id="checkModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Submit Your Order!</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        </div>
+
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-light" data-dismiss="modal">Go back</button>
+                        <button type="submit" class="btn btn-dark">Place Order</button>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
+
             </form>
         </div>
     </div>
